Fixing header margin and font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ a:hover {
 .heading-main {
   display: flex;
   flex-direction: column;
+  font-size: 2rem;
+  margin-top: 15rem;
   font-family: Poppins; }
   .heading-main__hello {
     border-bottom: 2px solid #212529;
@@ -48,7 +50,7 @@ a:hover {
   @media (min-width: 576px) {
     .heading-main {
       font-size: 2.5rem;
-      margin-top: 15rem; } }
+      margin-top: 1 } }
   @media (min-width: 992px) {
     .heading-main {
       font-size: 3rem;
